syntax = "proto3";

package users;

service UsersService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {}
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}
}

message User {
  string id = 1;
  string email = 2;
  string password = 3;
}

message CreateUserRequest {
  string email = 2;
  string password = 3;
}
message CreateUserResponse {
  User user = 1;
}

message GetUserRequest {
  string id = 1;
}
message GetUserResponse {
  User user = 1;
}

message UpdateUserRequest {
  User user = 1;
}
message UpdateUserResponse {
  User user = 1;
}

message DeleteUserRequest {
  string id = 1;
}
message DeleteUserResponse {
  
}

